<resources>
  <string name="app_name">Travel Planner</string>
  <string name="photo">Photo: %s</string>
  <string name="title_activity_login">Sign in</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="action_sign_up">Not a member? Sign Up</string>
  <string name="alternative_sign_in">Or sign in using</string>
  <string name="action_forgot_password">Forgot password?</string>
  <string name="action_login">Login</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
</resources>
