<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="#ECECEC"
  android:padding="8dp"
  android:orientation="vertical"
  tools:context=".activities.SignInActivity">

  <TextView
    android:id="@+id/textview_login"
    android:text="@string/action_login"
    android:textSize="32sp"
    android:layout_marginStart="8dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="@dimen/default_padding">

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:textSize="14sp"
          android:hint="@string/prompt_email"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:textSize="14sp"
          android:hint="@string/prompt_password"/>

      </android.support.design.widget.TextInputLayout>

      <Button
        android:id="@+id/btn_login"
        android:text="@string/action_login"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:paddingTop="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/default_padding"
        android:backgroundTint="#10A724"
        android:layout_width="170dp"
        android:layout_height="wrap_content"/>

      <Button
        android:id="@+id/btn_forgot_password"
        android:text="@string/action_forgot_password"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        android:paddingTop="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/default_padding"
        android:backgroundTint="#787878"
        android:layout_width="170dp"
        android:layout_height="wrap_content"/>

      <Button
        android:id="@+id/btn_sign_up"
        android:text="@string/action_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        style="?android:attr/borderlessButtonStyle"/>

      <TextView
        android:text="@string/alternative_sign_in"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <ImageButton
          android:id="@+id/btn_login_gplus"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="?android:selectableItemBackground"
          android:paddingEnd="@dimen/default_padding"
          android:paddingStart="@dimen/default_padding"
          android:src="@drawable/ic_google_plus"/>

        <ImageButton
          android:id="@+id/btn_login_facebook"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="?android:selectableItemBackground"
          android:paddingEnd="@dimen/default_padding"
          android:paddingStart="@dimen/default_padding"
          android:src="@drawable/ic_facebook"/>

        <ImageButton
          android:id="@+id/btn_login_twitter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="?android:selectableItemBackground"
          android:paddingEnd="@dimen/default_padding"
          android:paddingStart="@dimen/default_padding"
          android:src="@drawable/ic_twitter"/>

      </LinearLayout>

    </LinearLayout>

  </android.support.v7.widget.CardView>

</LinearLayout>
